--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <link href="/styles.css" rel="stylesheet" type="text/css" media="all">
+    <link href="/midi2sco/styles.css" rel="stylesheet" type="text/css" media="all">
     <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css"
           integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w"
           crossorigin="anonymous">
@@ -8,6 +8,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="/js/main.js"></script>
+    <script src="/midi2sco/js/main.js"></script>
   </body>
 </html>
