--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="/midi2sco/js/main.js"></script>
+    <script src="/midi2sco/js/main.js?cache=1"></script>
   </body>
 </html>
